trafeik.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
    name: traefik-deployment
    labels:
        app: traefik
    namespace: default
spec:
    replicas: 1
    selector:
        matchLabels:
            app: traefik
    template:
        metadata:
            labels:
                app: traefik
        spec:
            serviceAccountName: traefik-account

            containers:
                - name: traefik
                  image: traefik:v2.10
                  args:
                      - --api.insecure
                      - --providers.kubernetesingress
                  ports:
                      - name: web
                        containerPort: 80
                      - name: dashboard
                        containerPort: 8080
                  resources:
                      limits:
                          memory: '2Gi'
                          cpu: '1000m'
                      requests:
                          memory: '500Mi'
                          cpu: '500m'
---
apiVersion: v1
kind: Service
metadata:
    name: traefik-dashboard-service
    namespace: default
spec:
    type: NodePort
    ports:
        - port: 8080
          targetPort: dashboard
          nodePort: 30001
    selector:
        app: traefik
---
apiVersion: v1
kind: Service
metadata:
    name: traefik-web-service
    namespace: default
spec:
    type: NodePort
    ports:
        - targetPort: web
          port: 80
          nodePort: 30000
    selector:
        app: traefik
