ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: jenkins-ingress
    namespace: jenkins
spec:
    rules:
        - http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: jenkins-service
                            port:
                                name: jenkins
